--- a/app/src/main/res/layout-land/activity_search.xml
+++ b/app/src/main/res/layout-land/activity_search.xml
@@ -125,10 +125,15 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
+        android:orientation="vertical"
+        android:paddingHorizontal="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/search_pane"
-        app:layout_constraintTop_toBottomOf="@id/search_results_description" />
+        app:layout_constraintTop_toBottomOf="@id/search_results_description"
+        tools:itemCount="3"
+        tools:listitem="@layout/list_item_search_repo" />
 
     <FrameLayout
         android:id="@+id/loading_indicator_container"
